# FastApi-Todos

./: .gitignore  Dockerfile  README.md  db.json  docker-compose.yml  grafana_dashboard.json  main.py  model.py  pyproject.toml  repository.py
.github/workflows/: build.yml
grafana/provisioning/datasources/: datasource.yml
jmeter/: .gitignore  Dockerfile  fastapi_test_plan.jmx
prometheus/: prometheus.yml
templates/: index.html
tests/: test_main.py
